--- a/tarefa-01/package.json
+++ b/tarefa-01/package.json
@@ -4,8 +4,12 @@
   "description": "um servidor web basico para aprender nodejs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "executar": "nodemon server.js"
   },
   "author": "Lucas Santana",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
